# OpenBB

openbb_platform/extensions/: pyproject.toml
openbb_platform/extensions/commodity/openbb_commodity/: commodity_router.py
openbb_platform/extensions/commodity/openbb_commodity/price/: price_router.py
openbb_platform/extensions/derivatives/openbb_derivatives/futures/: futures_router.py
openbb_platform/extensions/derivatives/openbb_derivatives/options/: options_router.py
openbb_platform/extensions/econometrics/openbb_econometrics/: econometrics_router.py
openbb_platform/extensions/economy/openbb_economy/: economy_router.py
openbb_platform/extensions/economy/openbb_economy/survey/: survey_router.py
openbb_platform/extensions/equity/openbb_equity/calendar/: calendar_router.py
openbb_platform/extensions/equity/openbb_equity/discovery/: discovery_router.py
openbb_platform/extensions/equity/openbb_equity/estimates/: estimates_router.py
openbb_platform/extensions/equity/openbb_equity/fundamental/: fundamental_router.py
openbb_platform/extensions/equity/openbb_equity/ownership/: ownership_router.py
openbb_platform/extensions/equity/openbb_equity/price/: price_router.py
openbb_platform/extensions/equity/openbb_equity/shorts/: shorts_router.py
openbb_platform/extensions/etf/openbb_etf/discovery/: discovery_router.py
openbb_platform/extensions/fixedincome/openbb_fixedincome/: fixedincome_router.py
openbb_platform/extensions/fixedincome/openbb_fixedincome/corporate/: corporate_router.py
openbb_platform/extensions/fixedincome/openbb_fixedincome/government/: government_router.py
openbb_platform/extensions/fixedincome/openbb_fixedincome/rate/: rate_router.py
openbb_platform/extensions/fixedincome/openbb_fixedincome/spreads/: spreads_router.py
openbb_platform/extensions/fund/: README.md  pyproject.toml
openbb_platform/extensions/fund/openbb_fund/: __init__.py  fund_router.py
openbb_platform/extensions/index/openbb_index/: index_router.py
openbb_platform/extensions/quantitative/openbb_quantitative/: quantitative_router.py
openbb_platform/extensions/technical/openbb_technical/: technical_router.py
(+34 files in other folders)
