[tool.poetry]
name = "openbb-extensions"
version = "1.1.0"
description = "Only for jnzd, aggreate different extensions."
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [
    { include = "openbb_commodity", from = "commodity"},
    { include = "openbb_derivatives", from = "derivatives"},
    { include = "openbb_econometrics", from = "econometrics"},
    { include = "openbb_economy", from = "economy"},
    { include = "openbb_equity", from = "equity"},
    { include = "openbb_etf", from = "etf"},
    { include = "openbb_fixedincome", from = "fixedincome"},
    { include = "openbb_quantitative", from = "quantitative"},
    { include = "openbb_technical", from = "technical"},
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
