[tool.poetry]
name = "openbb-fund"
version = "0.0.2"
description = "Fund extension for OpenBB"
authors = ["jnzd Team <@jinniuzhidao,com>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_fund" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openbb-core = "^1.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
fund = "openbb_fund.fund_router:router"
